# goo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  LICENSE  README.md  effects.py  eslint.config.js  goo.py  odev.py  oo.py  package-lock.json  package.json  pyproject.toml  services.py
addons/autologin/: __manifest__.py
addons/autologin/controllers/: main.py
addons/rust_bundler/: README.md  __manifest__.py  benchmark.py
addons/rust_bundler/models/: __init__.py  assetsbundle.py
addons/rust_bundler/native/: Cargo.toml  ORIGIN.md  pyproject.toml
addons/rust_bundler/native/src/: bundler.rs  lib.rs  minifier.rs  transpiler.rs  ts_transpiler.rs  utils.rs  xml_bundle.rs
addons/rust_bundler/native/tests/: node_execution.rs
backend/: cache.py  effects.py  models.py  server.py  services.py
static/: app.js  config.js  index.html  style.css
static/app/: components.js  config.js  plugins.js  utils.js
static/lib/: owl.js  owlx.js
static/src/: addons_plugin.js  assets_plugin.js  claude_plugin.js  code_plugin.js  components.js  config.js  config_models.js  config_plugin.js  database_plugin.js  dialog_plugin.js  event_log_plugin.js  log_buffer.js  main.js  memory_plugin.js  nightly_plugin.js  observed_models.js  plugins.js  presets.js  recordset.js  review_plugin.js  router_plugin.js  runtime_models.js  server_plugin.js  store_plugin.js  terminal_plugin.js  tests_plugin.js  update_plugin.js  utils.js  worktree_plugin.js
static/src/addons/: addons.js
static/src/addons_screen/: addons.js  addons_plugin.js
tests/: test_services.py
(+108 files in other folders)
