[package]
name = "goo_odoo_bundler"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "goo_odoo_bundler"
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.5.0"
oxc_allocator = "0.98.0"
oxc_codegen = "0.98.0"
oxc_minifier = "0.98.0"
oxc_parser = "0.98.0"
oxc_semantic = "0.98.0"
oxc_span = "0.98.0"
oxc_transformer = "0.98.0"
pyo3 = { version = "0.23.3", features = ["extension-module"], optional = true }
quick-xml = "0.38.4"
rayon = "1.11.0"
regex = "1.12.2"

[features]
default = []
python = ["dep:pyo3"]
